- Social Event Send functionality migrated from Mailchimp to Brevo - Social event mongoose model and routes migrated to typescript - Committee Year page enhanced to allow more flexible layout of Committee Actions (e.g. they can be placed above Committee Years) - Documentation on Bulk Load process updated - Mailchimp dependencies partly moved into MemberDefaultsService to reduce the number of components and services that mailchimp needs to be injected into and provide non-specific mail provider subscription and member reset functions

--- a/projects/ngx-ramblers/src/app/pages/admin/member-admin/member-admin.component.html
+++ b/projects/ngx-ramblers/src/app/pages/admin/member-admin/member-admin.component.html
@@ -192,13 +192,13 @@
             </td>
           </ng-container>
           <ng-container *ngIf="systemConfig?.mailDefaults?.mailProvider==MailProvider.BREVO">
-            <td *ngFor="let keyValue of mailListUpdaterService.mapToKeyValues(mailConfig?.lists)">
+            <td *ngFor="let keyValue of mailListUpdaterService.mapToKeyValues(mailMessagingConfig?.mailConfig?.lists)">
               <app-switch-icon [on]="subscriptionFor(member, keyValue)"/>
             </td>
           </ng-container>
           <td class="pointer" *ngIf="confirm.bulkDeleteOutstanding()" (click)="toggleDeletionMarker(member.id)">
-
-          <fa-icon *ngIf="markedForDelete(member.id)" [icon]="faUserXmark" class="member-delete"></fa-icon>
+            <fa-icon *ngIf="markedForDelete(member.id)" [icon]="faUserXmark"
+                     class="member-delete"></fa-icon>
           </td>
         </tr>
         </tbody>
