- Mail-settings page (/admin/mail-settings?tab=mail-list-settings) now allows creation of any number of mailing lists. Rename or delete options also available. - All prior hard-coding to General, Walks or Social Event list names (as per mailchimp design) removed. - Mail settings Notification config editor allows default list to be specified when Member Selection is Mailing list. - Committee and Social Events mail send now allow to send to any defined list but default to the default list specified in the Notification config. - Auto Subscription to mailing list now configured on a per-list basis rather than globally. - DataPopulationService created which now contains defaultPageContentForAdminActionButtons() formerly in Admin component. But also has generateDefaultContentTextItems(), which writes to the database any missing content text items needed for new / changed components.

--- a/projects/ngx-ramblers/src/app/pages/admin/member-admin-modal/member-admin-modal.component.html
+++ b/projects/ngx-ramblers/src/app/pages/admin/member-admin-modal/member-admin-modal.component.html
@@ -363,7 +363,7 @@
       </tab>
       <tab app-mailchimp-subscription-settings heading="Mailchimp" [member]="member" [mailchimpConfig]="mailchimpConfig"
            *ngIf="systemConfig?.mailDefaults?.mailProvider=== MailProvider.MAILCHIMP"/>
-      <tab app-mail-subscription-settings heading="Brevo" [member]="member" [members]="members" [mailConfig]="mailConfig" [systemConfig]="systemConfig" [mailListAudits]="mailListAudits"
+      <tab app-mail-subscription-settings heading="Brevo" [member]="member" [members]="members" [mailMessagingConfig]="mailMessagingConfig" [systemConfig]="systemConfig" [mailListAudits]="mailListAudits"
            *ngIf="systemConfig?.mailDefaults?.mailProvider=== MailProvider.BREVO"/>
       <tab heading="Audit">
         <div class="img-thumbnail thumbnail-admin-edit">
