- Actioms added: Duplicate Column, Move Column to left, Move Column to right - Image Edit additions: Show cropped images size, Image Data As Next, Image Data As Previous - Fixed toggle between new album name and existing album select - Show Minimum of 10 rows of data in markdown editor - Carousel view fixes:   - if album level event link is set, this link and title is displayed on all slides except those that have event links created directly   - slide interval fixed so that slides cycle by default if slideinterval defined but pause when mouse moved over slide - "Create content" alert link is now displayed if link clicked to non-existent page. Previously route would not change and no feedback was given

--- a/projects/ngx-ramblers/src/app/carousel/view/carousel.html
+++ b/projects/ngx-ramblers/src/app/carousel/view/carousel.html
@@ -5,7 +5,7 @@
                                     [imageTags]="lazyLoadingMetadata?.contentMetadata?.imageTags"
                                     [index]="index"
                                     (tagChanged)="tagChanged($event)"/>
-      <carousel *ngIf="lazyLoadingMetadata" [noPause]="false" [isAnimated]="true"
+      <carousel *ngIf="lazyLoadingMetadata" (mouseenter)="mouseEnter($event)"(mouseleave)="mouseLeave($event)" [isAnimated]="true" [noPause]="noPause" [pauseOnFocus]="noPause"
                 [interval]="album.slideInterval || 5000"
                 [showIndicators]="album.showIndicators && showIndicators"
                 [(activeSlide)]="lazyLoadingMetadata.activeSlideIndex"
@@ -18,11 +18,12 @@
                  'object-fit': 'cover',
                  'object-position': 'center'}">
           <div class="carousel-caption">
-            <h4>{{slide.text}}</h4>
-            <div *ngIf="slide.eventId">
+            <h4>{{ slide.text || album.subtitle }}</h4>
+            <div *ngIf="slide.eventId || album.eventId">
               <a delay="500" class="badge event-date"
-                 [tooltip]="eventTooltip(slide)"
-                 [placement]="!showIndicators?'bottom':'right'" [href]="urlService.eventUrl(slide)">
+                 [tooltip]="eventTooltip(slide.eventId? slide.dateSource : album.eventType)"
+                 [placement]="!showIndicators?'bottom':'right'"
+                 [href]="urlService.eventUrl(slide.eventId? slide : {dateSource:album.eventType, eventId: album.eventId})">
                 on {{slide.date | displayDate}}</a>
             </div>
           </div>
