--- a/projects/ngx-ramblers/src/app/modules/common/card/image/card-image.html
+++ b/projects/ngx-ramblers/src/app/modules/common/card/image/card-image.html
@@ -2,11 +2,11 @@
   <img *ngIf="unconstrainedHeight" class="card-img-top" (load)="imageLoaded($event)"
        (error)="imageError($event)"
        [ngStyle]="{'border-radius.px': borderRadius}"
-       [src]="urlService.imageSource(imageSource)" [routerLink]="urlService.routerLinkUrl(imageLink)">
+       [src]="urlService.imageSource(imageSource, false, true)" [routerLink]="urlService.routerLinkUrl(imageLink)">
   <img *ngIf="!unconstrainedHeight" class="card-img-top" [height]="constrainedHeight" (load)="imageLoaded($event)"
        (error)="imageError($event)"
        [ngStyle]="{'border-radius.px': borderRadius}"
-       [src]="urlService.imageSource(imageSource)" [routerLink]="urlService.routerLinkUrl(imageLink)">
+       [src]="urlService.imageSource(imageSource, false, true)" [routerLink]="urlService.routerLinkUrl(imageLink)">
 </ng-container>
 <div *ngIf="cardMissingImage() || cardShouldHaveIcon()" class="row no-image"
      [ngClass]="{'small-icon-container': smallIconContainer}">
