--- a/projects/ngx-ramblers/src/app/modules/common/dynamic-content/dynamic-content.sass
+++ b/projects/ngx-ramblers/src/app/modules/common/dynamic-content/dynamic-content.sass
@@ -25,3 +25,8 @@
   overflow: hidden
   text-overflow: ellipsis
   white-space: nowrap
+
+.compressed-view
+  transform: scale(0.5)
+  transform-origin: top left
+
